<resources>
    <string name="app_name">MoyuTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登陆</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="regist">注册</string>
    <string name="inserPhone">输入手机号码</string>
    <string name="_86">中国 +86</string>
    <string name="plzRegist">输入手机号，快速注册</string>
    <string name="gotoRegist">注册新用户</string>
    <string name="plzPassword">请输入密码</string>
    <string name="sendValidate">发送</string>
    <string name="validate">验证码</string>
    <string name="title_activity_newm">NewmActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_password">Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirmPassword">确认</string>
</resources>
