<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registtb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registtb"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:lines="1"
        android:padding="20dp"
        android:text="@string/plzRegist"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:padding="20dp"
        android:text="@string/_86"
        android:textColor="@color/black"
        android:textSize="20dp"

        />

    <EditText
        android:id="@+id/regist_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:hint="@string/inserPhone"
        android:inputType="textVisiblePassword"
        android:lines="1"
        android:maxLength="11"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/validatell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regist_phone"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validate"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_below="@+id/text2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="输入验证码"
            android:inputType="textVisiblePassword"
            android:lines="1"
            android:maxLength="11"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="18dp" />
        <Button
            android:id="@+id/btn_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sendValidate" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/validatell"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="50dp"
        android:background="@color/crimson"
        android:text="@string/regist"
        android:textColor="@color/white"
        android:textSize="18dp" />
</RelativeLayout>
